--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_product_details">ProductDetailsActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="title_activity_cart">CartActivity</string>
 </resources>
